some params for test
note that test are run only with mvn verify and not mvn test